--- a/app/src/main/res/layout/item_list_file.xml
+++ b/app/src/main/res/layout/item_list_file.xml
@@ -3,7 +3,7 @@
     <RelativeLayout
         android:layout_marginBottom="5dp"
         android:layout_width="match_parent"
-        android:background="#50000000"
+        android:background="#000000"
         android:layout_height="@dimen/listItemNormal">
         <ImageView
             android:id="@+id/itemListFile_icon"
