--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="textNormal">#666666</color>
     <color name="textFocus">#999999</color>
-    <color name="textTitle">#000000</color>
-    <color name="textTitleSub">#450000</color>
+    <color name="textTitle">#ffffff</color>
+    <color name="textTitleSub">#ffffff</color>
 </resources>
