--- a/app/src/main/res/layout/activity_file_browser.xml
+++ b/app/src/main/res/layout/activity_file_browser.xml
@@ -15,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingLeft="3dp"
-        android:alpha="0.3"
+        android:alpha="1"
+        android:background="@drawable/background"
         android:paddingRight="3dp">
         <RelativeLayout
             android:id="@+id/fileBrowser_topRL"
@@ -50,6 +51,13 @@
                 android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/fileBrowser_transmitIV"
+                    android:src="@drawable/ic_searchgo_normal"
+                    android:onClick="@{vm::onClick}"
+                    android:padding="10dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp" />
                 <ImageView
                     android:id="@+id/fileBrowser_topSearchIV"
                     android:src="@drawable/ic_searchgo_normal"
