增加多选操作

--- a/app/src/main/res/drawable/checkbox.xml
+++ b/app/src/main/res/drawable/checkbox.xml
@@ -3,6 +3,8 @@
         android:drawable="@drawable/checkbox_on_normal"
         android:state_checked="true"/>
     <item
-        android:drawable="@drawable/checkbox_on_disable_dark"/>
+        android:drawable="@drawable/checkbox_on_disable_dark"
+        android:state_checked="false"/>
+    <item android:drawable="@drawable/checkbox_on_disable_dark"/>
 
 </selector>
