--- a/app/src/main/res/layout/activity_file_browser.xml
+++ b/app/src/main/res/layout/activity_file_browser.xml
@@ -14,8 +14,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/background"
         android:paddingLeft="3dp"
-        android:alpha="0.2"
         android:paddingRight="3dp">
         <RelativeLayout
             android:id="@+id/fileBrowser_topRL"
