--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,6 @@
     <dimen name="textSmall">13sp</dimen>
     <dimen name="textTitle">18sp</dimen>
     <dimen name="listItemNormal">55dp</dimen>
+    <dimen name="listIconNormal">38dp</dimen>
     <dimen name="titleIconSize">28dp</dimen>
 </resources>
