--- a/app/src/main/res/layout/activity_file_browser.xml
+++ b/app/src/main/res/layout/activity_file_browser.xml
@@ -14,6 +14,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/background"
         android:paddingBottom="1dp"
         android:paddingTop="10dp"
         android:paddingLeft="5dp"
@@ -182,46 +183,50 @@
                 android:background="#000000"
                 android:textColor="#fff"
                 android:textStyle="bold"
-                android:layout_gravity="center_horizontal"
+                android:gravity="center_horizontal"
                 android:layout_weight="1"
-                android:layout_width="@dimen/listIconNormal"
-                android:layout_height="@dimen/listIconNormal"/>
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
             <TextView
                 android:id="@+id/fileBrowser_copyTV"
                 android:drawableTop="@drawable/ic_back"
                 android:text="Copy"
                 android:layout_weight="1"
-                android:layout_gravity="center_horizontal"
+                android:gravity="center_horizontal"
                 android:onClick="@{vm::onClick}"
-                android:layout_width="@dimen/listIconNormal"
-                android:layout_height="@dimen/listIconNormal"/>
+                android:background="#000000"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
             <TextView
                 android:id="@+id/fileBrowser_moveTV"
                 android:drawableTop="@drawable/ic_back"
                 android:text="Move"
                 android:layout_weight="1"
-                android:layout_gravity="center_horizontal"
+                android:background="#000000"
+                android:gravity="center_horizontal"
                 android:onClick="@{vm::onClick}"
-                android:layout_width="@dimen/listIconNormal"
-                android:layout_height="@dimen/listIconNormal"/>
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
             <TextView
                 android:id="@+id/fileBrowser_deleteTV"
                 android:drawableTop="@drawable/ic_back"
                 android:text="Delete"
-                android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
+                android:background="#000000"
                 android:onClick="@{vm::onClick}"
-                android:layout_width="@dimen/listIconNormal"
-                android:layout_height="@dimen/listIconNormal"/>
+                android:gravity="center_horizontal"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
             <TextView
                 android:id="@+id/fileBrowser_moreTV"
                 android:drawableTop="@drawable/ic_back"
                 android:text="More"
-                android:layout_gravity="center_horizontal"
+                android:gravity="center_horizontal"
                 android:layout_weight="1"
+                android:background="#000000"
                 android:onClick="@{vm::onClick}"
-                android:layout_width="@dimen/listIconNormal"
-                android:layout_height="@dimen/listIconNormal"/>
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
     </RelativeLayout>
 </layout>
