--- a/app/src/main/res/layout/item_transport.xml
+++ b/app/src/main/res/layout/item_transport.xml
@@ -4,6 +4,11 @@
         <variable
             name="task"
             type="com.merlin.task.DownloadTask" />
+        <import type="com.merlin.task.Status"/>
+        <import type="android.view.View"/>
+        <variable
+            name="clickListener"
+            type="android.view.View.OnClickListener" />
     </data>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -58,10 +63,23 @@
                       android:layout_height="wrap_content"/>
               </LinearLayout>
               <ImageView
+                  android:id="@+id/item_transport_pauseIV"
                   android:src="@drawable/selector_pause"
                   android:layout_gravity="right"
                   android:layout_alignParentRight="true"
+                  android:clickable="true"
+                  android:visibility="@{task.status==Status.DOWNLOADING?View.VISIBLE:View.GONE }"
                   android:layout_width="30dp"
+                  android:layout_height="30dp"/>
+              <ImageView
+                  android:id="@+id/item_transport_downloadIV"
+                  android:src="@drawable/selector_download"
+                  android:layout_gravity="right"
+                  android:layout_alignParentRight="true"
+                  android:layout_width="30dp"
+                  android:clickable="true"
+                  android:onClick="@{clickListener}"
+                  android:visibility="@{task.status!=Status.DOWNLOADING?View.VISIBLE:View.GONE }"
                   android:layout_height="30dp"/>
           </RelativeLayout>
         </LinearLayout>
