--- a/app/src/main/res/layout/item_transport.xml
+++ b/app/src/main/res/layout/item_transport.xml
@@ -68,6 +68,8 @@
                   android:layout_gravity="right"
                   android:layout_alignParentRight="true"
                   android:clickable="true"
+                  android:tag="@{task}"
+                  android:onClick="@{clickListener}"
                   android:visibility="@{task.status==Status.DOWNLOADING?View.VISIBLE:View.GONE }"
                   android:layout_width="30dp"
                   android:layout_height="30dp"/>
@@ -78,6 +80,7 @@
                   android:layout_alignParentRight="true"
                   android:layout_width="30dp"
                   android:clickable="true"
+                  android:tag="@{task}"
                   android:onClick="@{clickListener}"
                   android:visibility="@{task.status!=Status.DOWNLOADING?View.VISIBLE:View.GONE }"
                   android:layout_height="30dp"/>
