--- a/app/src/main/res/layout/item_transport.xml
+++ b/app/src/main/res/layout/item_transport.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="task"
-            type="com.merlin.task.DownloadTask" />
+            type="com.merlin.task.Download" />
         <import type="com.merlin.task.Status"/>
         <import type="android.view.View"/>
         <variable
@@ -18,7 +18,7 @@
         android:layout_height="60dp">
         <ProgressBar
             android:id="@+id/item_transporting_progressPB"
-            android:progress="@{task.progress}"
+            android:progress="@{task.progressInt}"
             android:layout_alignParentBottom="true"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
@@ -33,7 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:text="@{task.download.name}"
+                    android:text="@{task.targetName}"
                     android:textStyle="bold"
                     android:layout_alignParentLeft="true"
                     android:layout_width="wrap_content"
