--- a/app/src/main/res/drawable/selector_more.xml
+++ b/app/src/main/res/drawable/selector_more.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
         android:state_enabled = "false"
-        android:drawable = "@drawable/downloading_disable"/>
+        android:drawable = "@drawable/more_disable"/>
     <item
         android:state_pressed = "true"
-        android:drawable = "@drawable/downloading_pressed"/>
-    <item android:drawable = "@drawable/downloading_normal" />
+        android:drawable = "@drawable/more_pressed"/>
+    <item android:drawable = "@drawable/more_normal" />
 </selector>
