--- a/app/src/main/res/layout/activity_file_browser.xml
+++ b/app/src/main/res/layout/activity_file_browser.xml
@@ -172,58 +172,54 @@
             android:layout_alignParentBottom="true"
             android:orientation="horizontal"
             android:visibility="@{vm.isMultiMode()?View.VISIBLE:View.GONE}"
+            android:paddingBottom="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <TextView
+            <com.merlin.view.MenuTextView
                 android:id="@+id/fileBrowser_downloadTV"
                 android:drawableTop="@drawable/ic_back"
                 android:onClick="@{vm::onClick}"
                 binding:OnLongClickListener="@{vm}"
                 android:text="Download"
-                android:background="#000000"
                 android:textColor="#fff"
                 android:textStyle="bold"
                 android:gravity="center_horizontal"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
-            <TextView
-                android:id="@+id/fileBrowser_copyTV"
-                android:drawableTop="@drawable/ic_back"
+            <com.merlin.view.MenuTextView
+                android:id="@+id/selector_copy"
+                android:drawableTop="@drawable/selector_copy"
                 android:text="Copy"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:onClick="@{vm::onClick}"
-                android:background="#000000"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
-            <TextView
+            <com.merlin.view.MenuTextView
                 android:id="@+id/fileBrowser_moveTV"
-                android:drawableTop="@drawable/ic_back"
+                android:drawableTop="@drawable/selector_move"
                 android:text="Move"
                 android:layout_weight="1"
-                android:background="#000000"
                 android:gravity="center_horizontal"
                 android:onClick="@{vm::onClick}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
-            <TextView
+            <com.merlin.view.MenuTextView
                 android:id="@+id/fileBrowser_deleteTV"
-                android:drawableTop="@drawable/ic_back"
+                android:drawableTop="@drawable/selector_delete"
                 android:text="Delete"
                 android:layout_weight="1"
-                android:background="#000000"
                 android:onClick="@{vm::onClick}"
                 android:gravity="center_horizontal"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
-            <TextView
+            <com.merlin.view.MenuTextView
                 android:id="@+id/fileBrowser_moreTV"
-                android:drawableTop="@drawable/ic_back"
+                android:drawableTop="@drawable/selector_more"
                 android:text="More"
                 android:gravity="center_horizontal"
                 android:layout_weight="1"
-                android:background="#000000"
                 android:onClick="@{vm::onClick}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
