--- a/app/src/main/res/layout/activity_media_play.xml
+++ b/app/src/main/res/layout/activity_media_play.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:binding="http://schemas.android.com/apk/res-auto">
 
   <data>
     <variable
@@ -21,6 +22,10 @@
       </RelativeLayout>
 
       <androidx.recyclerview.widget.RecyclerView
+          binding:adapter="@{vm.playingAdapter}"
+          binding:layoutManager="@{vm.playingAdapter.layoutManager}"
+          android:layout_alignParentRight="true"
+          android:layout_centerVertical="true"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
   </RelativeLayout>
