--- a/app/src/main/res/layout/item_playing_media.xml
+++ b/app/src/main/res/layout/item_playing_media.xml
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="media"
+            type="com.merlin.media.Media" />
+    </data>
+    <RelativeLayout
+        android:background="@drawable/round_dark_corner_small"
+        android:padding="5dp"
+        android:layout_width="200dp"
+        android:gravity="center_vertical"
+        android:layout_height="50dp">
+        <TextView
+            android:text="@{media.title}"
+            android:textSize="@dimen/textTitle"
+            android:textColor="@color/textTitle"
+            android:layout_alignParentLeft="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-</LinearLayout>
+        </LinearLayout>
+    </RelativeLayout>
+</layout>
