--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,8 @@
     <dimen name="titleIconSize">28dp</dimen>
     <dimen name="listItemSizeSmall">40dp</dimen>
     <dimen name="listItemSizeMedium">60dp</dimen>
+    <dimen name="iconSizeLittle">25dp</dimen>
+    <dimen name="iconSizeSmall">30dp</dimen>
+    <dimen name="iconSizeMedium">40dp</dimen>
+    <dimen name="iconSizeLarge">50dp</dimen>
 </resources>
