--- a/app/src/main/res/layout/activity_media_play.xml
+++ b/app/src/main/res/layout/activity_media_play.xml
@@ -146,6 +146,13 @@
           android:layout_above="@id/mediaPlayBottomRL"
           android:layout_width="match_parent"
           android:layout_height="match_parent">
+          <ImageView
+              android:layout_centerHorizontal="true"
+              android:layout_centerVertical="true"
+              android:src="@drawable/album_default"
+              android:layout_marginBottom="20dp"
+              android:layout_width="150dp"
+              android:layout_height="150dp"/>
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_alignParentBottom="true"
