--- a/app/src/main/res/layout/activity_media_play.xml
+++ b/app/src/main/res/layout/activity_media_play.xml
@@ -13,6 +13,7 @@
   <RelativeLayout
       android:background="@drawable/background"
       android:padding="5dp"
+      android:alpha="0.3"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <RelativeLayout
