--- a/app/src/main/res/layout/item_media_sheet.xml
+++ b/app/src/main/res/layout/item_media_sheet.xml
@@ -13,7 +13,7 @@
         <RelativeLayout
             android:background="@drawable/round_corner_small"
             android:id="@+id/itemMediaSheet_RL"
-            android:layout_width="120dp"
+            android:layout_width="160dp"
             android:layout_height="120dp">
 
             <TextView
@@ -34,7 +34,7 @@
             android:layout_margin="5dp"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
-            android:textSize="@dimen/textTitle"
+            android:textSize="@dimen/textSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
